--- a/angular.json
+++ b/angular.json
@@ -44,6 +44,14 @@
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true
+            },
+            "mock": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.mock.ts"
+                }
+              ]
             }
           }
         },
@@ -55,6 +63,9 @@
           "configurations": {
             "production": {
               "browserTarget": "servicesim:build:production"
+            },
+            "mock": {
+              "browserTarget": "servicesim:build:mock"
             }
           }
         },
@@ -103,11 +114,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "servicesim:serve"
+            "devServerTarget": "servicesim:serve:mock"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "servicesim:serve:production"
+              "devServerTarget": "servicesim:serve:mock"
             }
           }
         },
